make test -> ctest

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   - cmake -DQUEUE_TESTS=on ..
 script:
   - make
-  - make test
+  - ctest
 notifications:
   email:
     recipients:
