update the tests with the new naming

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 #captain obvious there is not point to test boost::heap and std::priority_queue
 add_compile_options(-std=c++11 -DBOOST_TEST_DYN_LINK)
-add_executable(tqueue_test tqueue.cpp)
-target_link_libraries(tqueue_test ${Boost_LIBRARIES})
-add_test(tqueue_test tqueue_test)
+add_executable(queue_test test_queue.cpp)
+target_link_libraries(queue_test ${Boost_LIBRARIES})
+add_test(queue_test queue_test)
