--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_compile_options(-std=c++11)
 if(OPENMP_FOUND)
-add_compile_options(${OpenMP_C_FLAGS})
+    add_compile_options(${OpenMP_CXX_FLAGS})
 endif()
 add_executable(queue  main.cpp)
+if(OPENMP_FOUND)
+    target_link_libraries(queue ${OpenMP_CXX_FLAGS})
+endif()
