--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_compile_options(-std=c++11)
+add_compile_options(-std=c++11 -mavx)
 if(OPENMP_FOUND)
     add_compile_options(${OpenMP_CXX_FLAGS})
 endif()
