--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -2,7 +2,8 @@ add_compile_options(-std=c++11 -mavx)
 if(OPENMP_FOUND)
     add_compile_options(${OpenMP_CXX_FLAGS})
 endif()
-add_executable(queue  main.cpp)
+add_executable(queue main.cpp)
+target_link_libraries(queue ${TBB_LIBRARY})
 if(OPENMP_FOUND)
     target_link_libraries(queue ${OpenMP_CXX_FLAGS})
 endif()
