--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,13 @@ cmake_minimum_required (VERSION 2.8.12)
 project (queue)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)
 FIND_PACKAGE(Boost 1.49 REQUIRED unit_test_framework)
+
+option(QUEUE_BUILD_OMP "Build queue with openmp" OFF)
+if(QUEUE_BUILD_OMP)
 FIND_PACKAGE(OpenMP)
+endif()
+
+
 FIND_PACKAGE(TBB)
 
 include_directories(${Boost_INCLUDE_DIRS})
